// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Drawer/> should display the component correctly 1`] = `
<div>
  <div
    class="drawer-container"
    style="z-index: 5; transition-delay: 0ms;"
  >
    <div
      class="backdrop opened"
      style="transition-delay: 150ms; transition-duration: 150ms;"
    />
    <div
      class="drawer opened"
      data-testid="test"
      style="transition-duration: 300ms;"
    >
      Modal content
    </div>
  </div>
</div>
`;

exports[`<Drawer/> should display the component in fullscreen mode correctly 1`] = `
<div>
  <div
    class="drawer-container"
    style="z-index: 5; transition-delay: 0ms;"
  >
    <div
      class="backdrop opened"
      style="transition-delay: 150ms; transition-duration: 150ms;"
    />
    <div
      class="drawer fullscreen opened"
      data-testid="test"
      style="transition-duration: 300ms;"
    >
      Modal content
    </div>
  </div>
</div>
`;
